--- a/modelo/.env.example
+++ b/modelo/.env.example
@@ -1,30 +1,7 @@
-# ENV
-APP_NAME=Example
-NODE_ENV=development
-PORT=3333
-APP_URL=http://localhost:3333
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
-# DATABASE
-DB_CONNECTION=sqlite
-DB_USERNAME=
-DB_PASSWORD=
-DB_HOST=
-DB_PORT=
-DB_DATABASE=database.sqlite
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-# KEYS
-PRIVATE_KEY=
-PUBLIC_KEY=
-
-# MAIL
-MAIL_HOST=
-MAIL_PORT=
-MAIL_USER=
-MAIL_PASSWORD=
-
-# AWS PRODUCTION
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=
-AWS_BUCKET=
-    
+DATABASE_URL="postgresql://postgres:PASSWORD@localhost:5432/DATABASE?schema=public"
