--- a/modelo/package.json
+++ b/modelo/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.4.6",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.5.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "prisma": "^5.1.0",
     "typescript": "^5.1.6"
