--- a/modelo/package.json
+++ b/modelo/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^20.4.6",
     "express": "^4.18.2",
     "prisma": "^5.1.0",
