--- a/modelo/package.json
+++ b/modelo/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "npx ts-node-dev --transpile-only --no-notify server.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,11 +15,11 @@
     "@types/node": "^20.5.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "prisma": "^5.1.0",
+    "prisma": "^5.1.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@prisma/client": "^5.1.0"
+    "@prisma/client": "^5.1.1"
   },
   "prisma": {
     "schema": "src/models/schema.prisma"
