--- a/modelo/package.json
+++ b/modelo/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "npx ts-node-dev --transpile-only --no-notify server.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,11 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@prisma/client": "^5.1.0"
+    "@prisma/client": "^5.1.0",
+    "@types/cors": "^2.8.13",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "ts-node": "^10.9.1"
   },
   "prisma": {
     "schema": "src/models/schema.prisma"
