--- a/modelo/package.json
+++ b/modelo/package.json
@@ -20,7 +20,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.1.1",
-    "dotenv": "^16.3.1"
+    "@types/cors": "^2.8.13",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "ts-node": "^10.9.1"
   },
   "prisma": {
     "schema": "src/models/schema.prisma"
