--- a/modelo/package.json
+++ b/modelo/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "npx ts-node-dev --transpile-only --no-notify server.ts"
+    "start": "npx ts-node-dev --transpile-only --no-notify server.ts",
+    "keys": "npx ts-node src/config/generateRSAKeyPair.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,14 +16,16 @@
     "@types/node": "^20.5.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "prisma": "^5.1.1",
+    "prisma": "^5.2.0",
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@prisma/client": "^5.1.1",
+    "@prisma/client": "^5.2.0",
     "@types/cors": "^2.8.13",
+    "@types/passport-jwt": "^3.0.9",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.1",
     "ts-node": "^10.9.1"
   },
   "prisma": {
