--- a/modelo/.env.example
+++ b/modelo/.env.example
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:PASSWORD@localhost:5432/DATABASE?schema=public"
+DATABASE_URL="postgresql://postgres:root@localhost:5432/prismaTest?schema=public"
     
 
 
