--- a/modelo/package.json
+++ b/modelo/package.json
@@ -7,6 +7,10 @@
     "start": "npx ts-node-dev --transpile-only --no-notify server.ts",
     "keys": "npx ts-node src/config/generateRSAKeyPair.ts"
   },
+  "prisma": {
+    "schema": "src/models/schema.prisma",
+    "seed": "ts-node src/database/seed.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -27,8 +31,5 @@
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.1",
     "ts-node": "^10.9.1"
-  },
-  "prisma": {
-    "schema": "src/models/schema.prisma"
   }
 }
