--- a/modelo/package.json
+++ b/modelo/package.json
@@ -21,14 +21,15 @@
     "@types/node": "^20.5.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "prisma": "^5.2.0",
+    "prisma": "^4.9.0",
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@prisma/client": "^5.2.0",
+    "@prisma/client": "^4.9.0",
     "@types/cors": "^2.8.13",
     "@types/passport-jwt": "^3.0.9",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.1",
     "ts-node": "^10.9.1"
